# hermes-pixel-format

./: AUTHORS  ChangeLog  FAQ  Hermes.spec  INSTALL  INSTALL.BSD  INSTALL.DOS  INSTALL.Win32  INSTALL.unix  Makefile.in  NEWS  README  TODO  TODO.Blitters  TODO.conversion  acconfig.h  aclocal.m4  autogen.sh  configure  configure.in  mkinstalldirs
RPM/mandrake/: hermes.spec
RPM/redhat/: Hermes.spec
autom4te.cache/: output.0  requests  traces.0
docs/api/: api-1.htm  api-2.htm  api-3.htm  api-4.htm  api.htm  api.ps  api.txt  generate
docs/api/sgml/: api.sgml
src/: A_FILES.CMD  Blit.c  Clear.c  Clear.h  Convert.c  Convert.h  Debug.h  Dither.c  Dither.h  FactConv.c  Factory.c  Factory.h  Format.c  H_Blit.h  H_Clear.h  H_Config.h  H_Conv.h  H_Format.h  H_Pal.h  H_Types.h  HeadC.h  HeadMMX.h  HeadX86.h  HermConf.h  Hermes.bpf  Hermes.bpr  Hermes.c  Hermes.def  Hermes.dsp  Hermes.dsw  Hermes.h  Hermes.mak  Hermes.rc  HermesStatic.bpf  HermesStatic.bpr  HermesStatic.dsp  HermesStatic.dsw  HermesStatic.mak  List.c  List.h  (+34 more)
src/nasm/: Makefile.WAT  mmx_clr.asm  mmx_main.asm  mmxp2_32.asm  mmxp_32.asm  x8616lut.asm  x86_clr.asm  x86_main.asm  x86pScpy.asm  x86p_16.asm  x86p_32.asm  x86p_cpy.asm  x86p_i8.asm  x86p_s32.asm
test/: CheckLeaks.c  Efence.cc  Efence.h  Makefile  README  Request.c  Test.c  TestPalette.c
test/new/: .cvsignore  NewTest.dsp  NewTest.dsw  TODO  main.cpp
